# rw-synchronizer

./: Container.h  Container.ipp  LICENSE  Manager.cpp  Manager.h  README.md  RWSyncContainer.h  RWSyncContainer.ipp  RWSyncManager.cpp  RWSyncManager.h  RWSynchronized.h
RWSync/OpenEphysCMakeBuild/: .gitignore  CMAKE_README.txt  CMakeLists.txt
RWSync/Source/: RWSyncContainer.h  RWSyncContainer.ipp  RWSyncManager.cpp  RWSyncManager.h
test/VS2013/: .gitignore  TestRWSync.sln
test/VS2013/TestRWSync/: Main.cpp  TestRWSync.vcxproj  TestRWSync.vcxproj.filters
